# GameLens-Collector-Service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mock_data.py  pyproject.toml
.github/workflows/: socket-tests.yml
db/: GameLens-Schema-Updated.sql
src/: api.py  collector.py  db.py  errors.py  socketio_ext.py  util.py
src/choice/: choice.py
src/docs/: choice.yml  choice_get.yml  collect.yml  collection_get.yml  game.yml  game_get.yml  get_user.yaml  run.yml  run_end.yml  run_get.yml  session.yml  user_insert.yml
src/game/: game.py
src/ingestion/: capture.py  collector.py  error.py
src/run/: run.py
src/user/: user.py
tests/: socket_demo.html  test_session_timestamp_validation.py  test_socket_capture.py
